--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.10.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -19,7 +18,8 @@
     "next": "15.4.3",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "resend": "^4.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
